--- a/Client/package.json
+++ b/Client/package.json
@@ -16,9 +16,11 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.9.4",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.6.0",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
